--- a/src/styles/PokemonList.css
+++ b/src/styles/PokemonList.css
@@ -1,7 +1,7 @@
 .PokemonList {
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  gap: 2rem;
-  margin: 3rem;
-  padding: 0 3rem 3rem
+  gap: 1rem;
+  margin: 1rem;
+  margin-top: 2rem;
 }
